[package]
name = "get-my-ip"
version = "1.0.0"
edition = "2021"
authors = ["Janusz Piechówka"]
repository = "https://github.com/jpiechowka/get-my-ip"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
